--- a/f5-playbooks/block-ips-role/block-ips.yaml
+++ b/f5-playbooks/block-ips-role/block-ips.yaml
@@ -4,9 +4,12 @@
   gather_facts: true
   vars_files:
     - vars/f5_vars.yml
+  vars:
+    Blocked_IPs: "{{ event.payload.payload }}"
   roles:
-    - block_my_ip
-    - waf_export_policy
-    - waf_block_ip
-    - waf_import_apply_policy
+    - debug
+    # - block_my_ip
+    # - waf_export_policy
+    # - waf_block_ip
+    # - waf_import_apply_policy
 
