--- a/f5-playbooks/block-ips-role/block-ips.yaml
+++ b/f5-playbooks/block-ips-role/block-ips.yaml
@@ -7,7 +7,7 @@
   vars:
     Blocked_IPs: "{{ event.payload.payload }}"
   roles:
-    - "{{playbook_dir}}/roles/debugging"
+    - f5-playbooks/block-ips-role/roles/debugging
     # - block_my_ip
     # - waf_export_policy
     # - waf_block_ip
