--- a/rulebooks/webhook-block-ips.yaml
+++ b/rulebooks/webhook-block-ips.yaml
@@ -19,5 +19,6 @@
 
       action:
         run_playbook:
-          name: f5-playbooks/block-ips-role/block-ips.yaml
+          name: f5-playbooks/block-ips-playbook/block-ips.yaml
+          # name: f5-playbooks/block-ips-role/block-ips.yaml
           var_root: event.payload
