remove vars file

--- a/f5-playbooks/block-ips-playbook/block-ips.yaml
+++ b/f5-playbooks/block-ips-playbook/block-ips.yaml
@@ -3,11 +3,15 @@
   hosts: lb
   connection: local
   gather_facts: false 
-  vars_files:
-    - vars/f5_vars.yml
   vars:
     Blocked_IPs: "{{ event.payload.payload }}"
-
+    F5_VIP_Name: VS_WEB
+    F5_VIP_Port: "80"
+    F5_Admin_Port: "443"
+    ASM_Policy_Name: "WAF-POLICY"
+    ASM_Policy_File: "/tmp/f5/WAF-POLICY.xml"
+    Block_My_IP: "yes"
+    
   tasks:
 
   - name: Setup provider
