--- a/f5-playbooks/block-ips-playbook/block-ips.yaml
+++ b/f5-playbooks/block-ips-playbook/block-ips.yaml
@@ -4,7 +4,7 @@
   connection: local
   gather_facts: false 
   vars:
-    Blocked_IPs: "{{ event.payload.payload }}"
+    Blocked_IPs: "{{ event.payload }}"
     F5_VIP_Name: VS_WEB
     F5_VIP_Port: "80"
     F5_Admin_Port: "443"
