--- a/rulebooks/webhook-block-ips.yaml
+++ b/rulebooks/webhook-block-ips.yaml
@@ -14,8 +14,8 @@
   rules:
     - name: Say Hello
       condition: event.payload.message == "Ansible Please Block Some IPs"
-
       action:
         run_playbook:
           name: f5-playbooks/block-ips-playbook/block-ips.yaml
           var_root: payload
+          post_events: true
