--- a/f5-playbooks/block-ips-playbook/block-ips.yaml
+++ b/f5-playbooks/block-ips-playbook/block-ips.yaml
@@ -31,6 +31,11 @@
         Blocked_IPs: "{{ Blocked_IPs_Events.split(', ') }}"
     when: Blocked_IPs_Events is defined
 
+  - name: Create Array from BlockedIPs
+    ansible.builtin.set_fact:
+        Blocked_IPs: "{{ Blocked_IPs[:-1] }}"
+    when: Blocked_IPs_Events is defined
+
   - debug:
       msg: "{{ Blocked_IPs }}"
 
