disable waf blocking

--- a/f5-playbooks/block-ips-playbook/block-ips.yaml
+++ b/f5-playbooks/block-ips-playbook/block-ips.yaml
@@ -209,9 +209,9 @@
       provider: "{{ provider }}"
     delegate_to: localhost
 
-  - name: Change ASM Policy to Blocking
-    bigip_command:
-      commands:
-      - modify asm policy WAF-POLICY blocking-mode enabled
-      - publish asm policy WAF-POLICY
-      provider: "{{ provider }}"
+  # - name: Change ASM Policy to Blocking
+  #   bigip_command:
+  #     commands:
+  #     - modify asm policy WAF-POLICY blocking-mode enabled
+  #     - publish asm policy WAF-POLICY
+  #     provider: "{{ provider }}"
