--- a/f5-playbooks/block-ips-playbook/block-ips.yaml
+++ b/f5-playbooks/block-ips-playbook/block-ips.yaml
@@ -25,6 +25,13 @@
 
   - debug:
       msg: "{{ hostvars }}"
+
+  - debug:
+      msg: "{{ vars }}"
+
+  - debug:
+      msg: "{{ environment }}"
+      
       
   - debug:
       msg: "{{ ansible_eda.event }}"
