--- a/f5-playbooks/block-ips-playbook/block-ips.yaml
+++ b/f5-playbooks/block-ips-playbook/block-ips.yaml
@@ -23,6 +23,10 @@
       server_port: "{{ F5_Admin_Port }}"
       validate_certs: "no"
 
+  - name: dump payload
+    debug:
+      var: event.payload
+      
   - debug:
       msg: "{{ hostvars }}"
 
